syntax = "proto3";

package AUTH_CREDENTIAL_PACKAGE;

import 'shared/enum.proto';

message AllowedService {
  string service = 1;
  repeated string paths = 2;
}

message AuthCredential {
  string id = 1;
  shared.EAuthCredential type = 2;
  string userName = 3;
  string password = 4;
  repeated string allowedPeers = 5;
  repeated AllowedService authServices = 6;
  repeated string authPaths = 7;
}
